[package]
name = "mac_arthur_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3.28"
hyper = "1.0.0-rc.4"
serde_json = "1.0.107"
chrono = "0.4.31"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }